// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`no-duplicate-overrides > complex failure > ./__snapshots__/openapi/complex.json 1`] = `
[
  {
    "message": "SDK method a.b.c.d already exists (x-fern-sdk-group-name: a.b.c, x-fern-sdk-method-name: d)",
    "nodePath": [
      "paths",
      "/a/b",
      "get",
    ],
    "relativeFilepath": "openapi/openapi.yml",
    "severity": "error",
  },
]
`;

exports[`no-duplicate-overrides > inlined failure > ./__snapshots__/openapi/complex.json 1`] = `
[
  {
    "message": "SDK method a.b already exists (x-fern-sdk-group-name: a, x-fern-sdk-method-name: b)",
    "nodePath": [
      "paths",
      "/a/b",
      "get",
    ],
    "relativeFilepath": "openapi/openapi.yml",
    "severity": "error",
  },
]
`;

exports[`no-duplicate-overrides > simple failure > ./__snapshots__/openapi/simple.json 1`] = `
[
  {
    "message": "SDK method a.b already exists (x-fern-sdk-group-name: a, x-fern-sdk-method-name: b)",
    "nodePath": [
      "paths",
      "/a/b",
      "get",
    ],
    "relativeFilepath": "openapi/openapi.yml",
    "severity": "error",
  },
]
`;
